--- a/inc/assets/css/ast-builder-customizer-rtl.css
+++ b/inc/assets/css/ast-builder-customizer-rtl.css
@@ -325,7 +325,7 @@
     margin-bottom: 8px;
 }
 #customize-control-astra-settings-header-mobile-items .popup-vertical-group .ahfb-builder-item,
-#customize-control-astra-settings-desktop-mobile-items .popup-vertical-group .ahfb-builder-item {
+#customize-control-astra-settings-header-desktop-items .popup-vertical-group .ahfb-builder-item {
 	margin: 4px;
 }
 
